--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
         });
 
         // Force 'contact' to be active if user is at the bottom of the page
-        // This handles cases where the last section is short
-        if ((window.innerHeight + window.pageYOffset) >= document.body.offsetHeight - 5) { // 5px buffer
+        if ((window.innerHeight + window.pageYOffset) >= document.body.offsetHeight - 5) {
             current = 'contact';
         }
 
@@ -158,7 +157,7 @@
     </style>
 </head>
 <body>
-    <aside class="info-sidebar" style="top: 415px;">
+    <aside class="info-sidebar" style="top: 425px;">
         <div class="sidebar-section">
             <h3>Education</h3>
             <div class="sidebar-item">
@@ -208,8 +207,8 @@
             <a href="#home" class="logo">MC</a>
             <div class="nav-links">
                 <a href="#about">About</a>
-                <a href="#projects">Projects</a>
                 <a href="#experience">Experience</a>
+                <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
             </div>
         </div>
@@ -278,113 +277,6 @@
                         <h4>No Sponsorship Needed</h4>
                         <p>Required until early <strong>2030</strong></p>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="projects" class="projects">
-        <div class="container">
-            <h2>Quantitative Research Projects</h2>
-            <p class="section-intro">Applied research in statistical modeling, algorithmic trading, and derivatives pricing</p>
-            
-            <div class="project-grid">
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Macro Regime Duration Model</h3>
-                        <div class="project-links">
-                            <a href="https://github.com/mcravi8/macro_regime_duration" target="_blank" class="project-link">GitHub →</a>
-                            <a href="macro-regime-model.html" class="project-link">See Details →</a>
-                        </div>
-                    </div>
-                    <p class="project-tech">Python · statsmodels · Markov-switching · Nelson-Siegel VAR</p>
-                    <p class="project-desc">Built 3-state Markov-switching model detecting latent Recession/Growth/Expansion regimes in GDP, inflation, and unemployment. Integrated yield-curve forecast with regime-conditioned mean-variance optimizer.</p>
-                    <div class="project-results">
-                        <div class="metric">
-                            <span class="metric-value">1.08</span>
-                            <span class="metric-label">Sharpe Ratio</span>
-                        </div>
-                        <div class="metric">
-                            <span class="metric-value">-45%</span>
-                            <span class="metric-label">Max Drawdown</span>
-                        </div>
-                        <div class="metric">
-                            <span class="metric-value">87%</span>
-                            <span class="metric-label">Regime Persistence</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Delta-Neutral Options Market-Making Simulator</h3>
-                        <div class="project-links">
-                            <a href="https://github.com/mcravi8/opt_mm_sim" target="_blank" class="project-link">GitHub →</a>
-                            <a href="options-mm-simulator.html" class="project-link">See Details →</a>
-                        </div>
-                    </div>
-                    <p class="project-tech">Python · Black-Scholes · LightGBM · cvxpy · Streamlit</p>
-                    <p class="project-desc">Minute-level NBBO-aware delta-neutral simulator with BS theoretical pricing, Greeks calculation, and put-call parity residual tracking. Features asymmetric spreads with inventory lean and delta-band hedging.</p>
-                    <div class="project-results">
-                        <div class="metric">
-                            <span class="metric-value">8-15%</span>
-                            <span class="metric-label">Target Fill Rate</span>
-                        </div>
-                        <div class="metric">
-                            <span class="metric-value">550+</span>
-                            <span class="metric-label">Fills (800-min test)</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Numerai ML Alpha Signals</h3>
-                        <div class="project-links">
-                            <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
-                            <a href="numerai-alpha.html" class="project-link">See Details →</a>
-                        </div>
-                    </div>
-                    <p class="project-tech">Python · LightGBM · Purged CV · Feature Engineering</p>
-                    <p class="project-desc">Developed cross-sectional ML alpha signals on ~280M rows and 2.4k features for market-neutral 20-day return forecasts. Deployed live in Numerai's hedge fund with automated weekly retraining.</p>
-                    <div class="project-results">
-                        <div class="metric">
-                            <span class="metric-value">1.38</span>
-                            <span class="metric-label">Validation Sharpe</span>
-                        </div>
-                        <div class="metric">
-                            <span class="metric-value">0.64</span>
-                            <span class="metric-label">Live Sharpe</span>
-                        </div>
-                        <div class="metric">
-                            <span class="metric-value">300+</span>
-                            <span class="metric-label">Eras Tested</span>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Options Parity Checker</h3>
-                        <div class="project-links">
-                            <a href="https://github.com/mcravi8/OptionsParityChecker_yfinance" target="_blank" class="project-link">GitHub →</a>
-                            <a href="options-parity.html" class="project-link">See Details →</a>
-                        </div>
-                    </div>
-                    <p class="project-tech">Python · Options Pricing · Real-time Data</p>
-                    <p class="project-desc">Real-time arbitrage detection tool for put-call parity violations across options chains.</p>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-header">
-                        <h3>Post-Earnings Drift Backtest</h3>
-                        <div class="project-links">
-                            <a href="https://github.com/mcravi8/PEAD-mini-WRDS" target="_blank" class="project-link">GitHub →</a>
-                            <a href="pead-backtest.html" class="project-link">See Details →</a>
-                        </div>
-                    </div>
-                    <p class="project-tech">Python · Event Study · Statistical Analysis</p>
-                    <p class="project-desc">Systematic analysis of post-earnings announcement drift patterns across market cap segments.</p>
                 </div>
             </div>
         </div>
@@ -496,6 +388,113 @@
                             <li>Automated eligibility checks and transaction workflows for 5+ major institutions</li>
                         </ul>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects" class="projects">
+        <div class="container">
+            <h2>Quantitative Research Projects</h2>
+            <p class="section-intro">Applied research in statistical modeling, algorithmic trading, and derivatives pricing</p>
+            
+            <div class="project-grid">
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Macro Regime Duration Model</h3>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/macro_regime_duration" target="_blank" class="project-link">GitHub →</a>
+                            <a href="macro-regime-model.html" class="project-link">See Details →</a>
+                        </div>
+                    </div>
+                    <p class="project-tech">Python · statsmodels · Markov-switching · Nelson-Siegel VAR</p>
+                    <p class="project-desc">Built 3-state Markov-switching model detecting latent Recession/Growth/Expansion regimes in GDP, inflation, and unemployment. Integrated yield-curve forecast with regime-conditioned mean-variance optimizer.</p>
+                    <div class="project-results">
+                        <div class="metric">
+                            <span class="metric-value">1.08</span>
+                            <span class="metric-label">Sharpe Ratio</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">-45%</span>
+                            <span class="metric-label">Max Drawdown</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">87%</span>
+                            <span class="metric-label">Regime Persistence</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Delta-Neutral Options Market-Making Simulator</h3>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/opt_mm_sim" target="_blank" class="project-link">GitHub →</a>
+                            <a href="options-mm-simulator.html" class="project-link">See Details →</a>
+                        </div>
+                    </div>
+                    <p class="project-tech">Python · Black-Scholes · LightGBM · cvxpy · Streamlit</p>
+                    <p class="project-desc">Minute-level NBBO-aware delta-neutral simulator with BS theoretical pricing, Greeks calculation, and put-call parity residual tracking. Features asymmetric spreads with inventory lean and delta-band hedging.</p>
+                    <div class="project-results">
+                        <div class="metric">
+                            <span class="metric-value">8-15%</span>
+                            <span class="metric-label">Target Fill Rate</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">550+</span>
+                            <span class="metric-label">Fills (800-min test)</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Numerai ML Alpha Signals</h3>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8" target="_blank" class="project-link">GitHub →</a>
+                            <a href="numerai-alpha.html" class="project-link">See Details →</a>
+                        </div>
+                    </div>
+                    <p class="project-tech">Python · LightGBM · Purged CV · Feature Engineering</p>
+                    <p class="project-desc">Developed cross-sectional ML alpha signals on ~280M rows and 2.4k features for market-neutral 20-day return forecasts. Deployed live in Numerai's hedge fund with automated weekly retraining.</p>
+                    <div class="project-results">
+                        <div class="metric">
+                            <span class="metric-value">1.38</span>
+                            <span class="metric-label">Validation Sharpe</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">0.64</span>
+                            <span class="metric-label">Live Sharpe</span>
+                        </div>
+                        <div class="metric">
+                            <span class="metric-value">300+</span>
+                            <span class="metric-label">Eras Tested</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Options Parity Checker</h3>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/OptionsParityChecker_yfinance" target="_blank" class="project-link">GitHub →</a>
+                            <a href="options-parity.html" class="project-link">See Details →</a>
+                        </div>
+                    </div>
+                    <p class="project-tech">Python · Options Pricing · Real-time Data</p>
+                    <p class="project-desc">Real-time arbitrage detection tool for put-call parity violations across options chains.</p>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-header">
+                        <h3>Post-Earnings Drift Backtest</h3>
+                        <div class="project-links">
+                            <a href="https://github.com/mcravi8/PEAD-mini-WRDS" target="_blank" class="project-link">GitHub →</a>
+                            <a href="pead-backtest.html" class="project-link">See Details →</a>
+                        </div>
+                    </div>
+                    <p class="project-tech">Python · Event Study · Statistical Analysis</p>
+                    <p class="project-desc">Systematic analysis of post-earnings announcement drift patterns across market cap segments.</p>
                 </div>
             </div>
         </div>
